--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-28 Thu 17:09]
+#+CAPTION: Clock summary at [2019-03-28 Thu 17:28]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *24:28* |       |      | 100.0 |
+| *Total time*                                           | *24:46* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 24:28   |       |      | 100.0 |
-| Active                                                 |         | 24:28 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 1:47 |   7.3 |
-| Sprint and product backlog grooming                    |         |       | 2:39 |  10.8 |
-| Create a video demo for the previous sprint's features |         |       | 3:11 |  13.0 |
-| Fix issues with emacs                                  |         |       | 2:42 |  11.0 |
-| Create a basic "project plan"                          |         |       | 2:08 |   8.7 |
-| Simplify qualified name                                |         |       | 3:39 |  14.9 |
-| Rename "language" to "technical space"                 |         |       | 5:21 |  21.9 |
-| Promote extraction entities to meta-model elements     |         |       | 3:01 |  12.3 |
+| Stories                                                | 24:46   |       |      | 100.0 |
+| Active                                                 |         | 24:46 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 1:47 |   7.2 |
+| Sprint and product backlog grooming                    |         |       | 2:39 |  10.7 |
+| Create a video demo for the previous sprint's features |         |       | 3:11 |  12.9 |
+| Fix issues with emacs                                  |         |       | 2:42 |  10.9 |
+| Create a basic "project plan"                          |         |       | 2:08 |   8.6 |
+| Simplify qualified name                                |         |       | 3:39 |  14.7 |
+| Rename "language" to "technical space"                 |         |       | 5:39 |  22.8 |
+| Promote extraction entities to meta-model elements     |         |       | 3:01 |  12.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -226,6 +226,7 @@ It seems we get errors in serialisation when using the map.
 
 *** STARTED Rename "language" to "technical space"                    :story:
     :LOGBOOK:
+    CLOCK: [2019-03-28 Thu 17:10]--[2019-03-28 Thu 17:28] =>  0:18
     CLOCK: [2019-03-28 Thu 16:52]--[2019-03-28 Thu 17:09] =>  0:17
     CLOCK: [2019-03-28 Thu 16:16]--[2019-03-28 Thu 16:51] =>  0:35
     CLOCK: [2019-03-28 Thu 16:10]--[2019-03-28 Thu 16:15] =>  0:05
