--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,22 +13,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-29 Fri 09:03]
+#+CAPTION: Clock summary at [2019-03-29 Fri 09:45]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *25:16* |       |      | 100.0 |
+| *Total time*                                           | *25:55* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 25:16   |       |      | 100.0 |
-| Active                                                 |         | 25:16 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 1:47 |   7.1 |
-| Sprint and product backlog grooming                    |         |       | 2:39 |  10.5 |
-| Create a video demo for the previous sprint's features |         |       | 3:11 |  12.6 |
-| Fix issues with emacs                                  |         |       | 2:42 |  10.7 |
-| Create a basic "project plan"                          |         |       | 2:08 |   8.4 |
-| Simplify qualified name                                |         |       | 3:39 |  14.4 |
-| Rename "language" to "technical space"                 |         |       | 6:09 |  24.3 |
-| Promote extraction entities to meta-model elements     |         |       | 3:01 |  11.9 |
+| Stories                                                | 25:55   |       |      | 100.0 |
+| Active                                                 |         | 25:55 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 1:47 |   6.9 |
+| Sprint and product backlog grooming                    |         |       | 2:39 |  10.2 |
+| Create a video demo for the previous sprint's features |         |       | 3:11 |  12.3 |
+| Fix issues with emacs                                  |         |       | 2:42 |  10.4 |
+| Create a basic "project plan"                          |         |       | 2:08 |   8.2 |
+| Simplify qualified name                                |         |       | 3:39 |  14.1 |
+| Rename "language" to "technical space"                 |         |       | 6:48 |  26.2 |
+| Promote extraction entities to meta-model elements     |         |       | 3:01 |  11.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -226,6 +226,9 @@ It seems we get errors in serialisation when using the map.
 
 *** STARTED Rename "language" to "technical space"                    :story:
     :LOGBOOK:
+    CLOCK: [2019-03-29 Fri 09:28]--[2019-03-29 Fri 09:45] =>  0:17
+    CLOCK: [2019-03-29 Fri 09:16]--[2019-03-29 Fri 09:27] =>  0:11
+    CLOCK: [2019-03-29 Fri 09:04]--[2019-03-29 Fri 09:15] =>  0:11
     CLOCK: [2019-03-29 Fri 09:00]--[2019-03-29 Fri 09:03] =>  0:03
     CLOCK: [2019-03-29 Fri 08:32]--[2019-03-29 Fri 08:59] =>  0:27
     CLOCK: [2019-03-28 Thu 17:10]--[2019-03-28 Thu 17:28] =>  0:18
@@ -264,6 +267,7 @@ Tasks:
 - language agnostic enum
 - mappings
 - modeline
+- extraction model
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
