--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-29 Fri 12:00]
+#+CAPTION: Clock summary at [2019-03-29 Fri 14:36]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *28:01* |       |      | 100.0 |
+| *Total time*                                           | *29:06* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 28:01   |       |      | 100.0 |
-| Active                                                 |         | 28:01 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 1:47 |   6.4 |
-| Sprint and product backlog grooming                    |         |       | 2:39 |   9.5 |
-| Create a video demo for the previous sprint's features |         |       | 3:11 |  11.4 |
-| Fix issues with emacs                                  |         |       | 2:42 |   9.6 |
-| Create a basic "project plan"                          |         |       | 2:08 |   7.6 |
-| Simplify qualified name                                |         |       | 3:39 |  13.0 |
-| Rename "language" to "technical space"                 |         |       | 7:22 |  26.3 |
-| Add intrinsic technical space ownership                |         |       | 1:12 |   4.3 |
-| Promote extraction entities to meta-model elements     |         |       | 3:21 |  12.0 |
+| Stories                                                | 29:06   |       |      | 100.0 |
+| Active                                                 |         | 29:06 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 1:47 |   6.1 |
+| Sprint and product backlog grooming                    |         |       | 2:39 |   9.1 |
+| Create a video demo for the previous sprint's features |         |       | 3:11 |  10.9 |
+| Fix issues with emacs                                  |         |       | 2:42 |   9.3 |
+| Create a basic "project plan"                          |         |       | 2:08 |   7.3 |
+| Simplify qualified name                                |         |       | 3:39 |  12.5 |
+| Rename "language" to "technical space"                 |         |       | 7:22 |  25.3 |
+| Add intrinsic technical space ownership                |         |       | 1:12 |   4.1 |
+| Promote extraction entities to meta-model elements     |         |       | 4:26 |  15.2 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -288,6 +288,7 @@ cannot be mapped to other technical spaces.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-03-29 Fri 13:31]--[2019-03-29 Fri 14:36] =>  1:05
     CLOCK: [2019-03-29 Fri 11:50]--[2019-03-29 Fri 12:00] =>  0:10
     CLOCK: [2019-03-29 Fri 11:39]--[2019-03-29 Fri 11:49] =>  0:10
     CLOCK: [2019-03-26 Tue 13:01]--[2019-03-26 Tue 14:31] =>  1:30
