--- a/doc/agile/v1/sprint_backlog_14.org
+++ b/doc/agile/v1/sprint_backlog_14.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-29 Fri 18:21]
+#+CAPTION: Clock summary at [2019-03-30 Sat 07:47]
 | <75>                                                   |         |       |      |       |
 | Headline                                               | Time    |       |      |     % |
 |--------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                           | *32:45* |       |      | 100.0 |
+| *Total time*                                           | *33:21* |       |      | 100.0 |
 |--------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                | 32:45   |       |      | 100.0 |
-| Active                                                 |         | 32:45 |      | 100.0 |
-| Edit release notes for previous sprint                 |         |       | 1:47 |   5.4 |
-| Sprint and product backlog grooming                    |         |       | 5:38 |  17.2 |
-| Create a video demo for the previous sprint's features |         |       | 3:11 |   9.7 |
-| Fix issues with emacs                                  |         |       | 2:42 |   8.2 |
-| Create a basic "project plan"                          |         |       | 2:08 |   6.5 |
-| Simplify qualified name                                |         |       | 3:39 |  11.1 |
-| Rename "language" to "technical space"                 |         |       | 7:22 |  22.5 |
-| Add intrinsic technical space ownership                |         |       | 1:12 |   3.7 |
-| Promote extraction entities to meta-model elements     |         |       | 5:06 |  15.6 |
+| Stories                                                | 33:21   |       |      | 100.0 |
+| Active                                                 |         | 33:21 |      | 100.0 |
+| Edit release notes for previous sprint                 |         |       | 1:47 |   5.3 |
+| Sprint and product backlog grooming                    |         |       | 5:38 |  16.9 |
+| Create a video demo for the previous sprint's features |         |       | 3:11 |   9.5 |
+| Fix issues with emacs                                  |         |       | 2:42 |   8.1 |
+| Create a basic "project plan"                          |         |       | 2:08 |   6.4 |
+| Simplify qualified name                                |         |       | 3:39 |  10.9 |
+| Rename "language" to "technical space"                 |         |       | 7:22 |  22.1 |
+| Add intrinsic technical space ownership                |         |       | 1:12 |   3.6 |
+| Promote extraction entities to meta-model elements     |         |       | 5:42 |  17.1 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -301,6 +301,7 @@ We probably need to delete and re-add the project.
 
 *** STARTED Promote extraction entities to meta-model elements        :story:
     :LOGBOOK:
+    CLOCK: [2019-03-30 Sat 07:10]--[2019-03-30 Sat 07:46] =>  0:36
     CLOCK: [2019-03-29 Fri 18:19]--[2019-03-29 Fri 18:21] =>  0:02
     CLOCK: [2019-03-29 Fri 18:00]--[2019-03-29 Fri 18:18] =>  0:18
     CLOCK: [2019-03-29 Fri 17:39]--[2019-03-29 Fri 17:59] =>  0:20
@@ -402,6 +403,19 @@ We should also allow for both:
 - full licence: used later at the product level.
 - licence summary: used for preambles in files.
 
+*** Move all utility formatters from extraction to generation         :story:
+
+We need to move all formatters into generation and update templates to
+point to new location.
+
+*** Stitch is still using artefact writer                             :story:
+
+Create a templating transform that is similar to the approach used by
+extraction - in fact, stitch should probably be using a transform in
+extraction.
+
+Delete artefact writer.
+
 *** Split wale out of stitch templates                                :story:
 
 Stitch requires extra work in order to split out decoration. This is
@@ -477,6 +491,14 @@ It is *very important* to understand that this is the decoration of
 the output of the stitch template *itself*, not of the code it will
 generate. The decoration of the generated code will be handled as at
 present, by manually calling the decoration formatters.
+
+*** Create a tests stereotype with profiles                           :story:
+
+At present we are ignoring all of the contents of =tests=. This means
+whenever we delete a type we are left behind with its tests. A better
+solution is to create model elements for each handcrafted test marked
+as "masd::handcrafted_test". This disables all facets except for
+tests. We can then remove the regex.
 
 *** Make extraction model name a qualified name                       :story:
 
